fix backface visibility

--- a/static/styles.css
+++ b/static/styles.css
@@ -9,14 +9,16 @@
   font-family: "ABC Arizona";
 }
 
+html {
+  background-color: red;
+}
+
 body {
+  margin: 1rem;
   background-color: bisque;
-  border-style: solid;
-  border-width: 1rem;
-  border-color: red;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .font-md {
@@ -59,6 +61,7 @@ h1 {
 
 .square-side {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   width: 10rem;
   height: 10rem;
   transition: all .8s ease;
